# drms

./: .black  .codespellrc  .coveragerc  .cruft.json  .flake8  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  .rtd-environment.yml  .rtd-requirements.txt  .ruff.toml  AUTHORS.txt  CHANGELOG.rst  CITATION  CITATION.rst  LICENSE.txt  MANIFEST.in  README.md  README.rst  azure-pipelines.yml  conftest.py  drms_json.py  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini  versioneer.py
.github/workflows/: ci.yml
changelog/: 102.bugfix.rst  116.breaking.1.rst  116.breaking.2.rst  137.feature.rst  156.doc.rst  52.bugfix.rst  73.bugfix.rst  76.trivial.rst  90.breaking.1.rst  90.breaking.2.rst  90.breaking.3.rst  90.breaking.4.rst  90.breaking.5.rst  90.breaking.7.rst  90.breaking.8.rst  90.trivial.1.rst  README.rst
doc/: api.rst  conf.py  index.rst  intro.rst  requirements.txt  rtd_requirements.txt  tutorial.rst
doc/_static/: copybutton.js
doc/_templates/: layout.html  versions.html
doc/_templates/autosummary/: class.rst
doc/_themes/drmsdoc/: theme.conf
doc/_themes/drmsdoc/static/: drmsdoc.css
docs/: Makefile  api.rst  citation.rst  conf.py  index.rst  intro.rst  tutorial.rst
docs/code_ref/: index.rst
docs/whatsnew/: changelog.rst  index.rst
drms/: __init__.py  __main__.py  _version.py  client.py  config.py  conftest.py  error.py  exceptions.py  json.py  main.py  utils.py  version.py
drms/_dev/: scm_version.py
drms/tests/: __main__.py  _runner.py  conftest.py  test_client.py  test_config.py  test_exceptions.py  test_init.py  test_jsoc_basic.py  test_jsoc_email.py  test_jsoc_export.py  test_jsoc_info.py  test_jsoc_query.py  test_json.py  test_kis_basic.py  test_main.py  test_series_info.py  test_seriesinfo.py  test_to_datetime.py  test_utils.py
drms/tests/online/: test_jsoc_basic.py  test_jsoc_email.py  test_jsoc_export.py  test_jsoc_info.py  test_jsoc_query.py  test_kis_basic.py
examples/: README.txt  create_joss_figure.py  create_sharp_plots.py  cutout_export_request.py  drms_json.py  example_helpers.py  export_as_is.py  export_fits.py  export_from_id.py  export_jpg.py  export_movie.py  export_print_urls.py  export_tar.py  exportdata_example.py  exportdata_example_old.py  list_hmi_series.py  list_keywords.py  plot_aia_lightcurve.py  plot_aia_ligthcurve.py  plot_hmi_lightcurve.py  plot_hmi_modes.py  plot_polarfield.py  plot_synoptic_mr.py  print_versions.py  skip_export_from_id.py
licenses/: README.md  README.rst
paper/: Makefile  create_joss_figure.py  latex.template  paper.bib  paper.md
src/drms/: CITATION.rst  _version.py  config.py
src/drms/tests/: test_config.py  test_exceptions.py  test_jsoc_basic.py  test_utils.py
