[build-system]
requires = [
  "setuptools>=62.1",
  "setuptools_scm[toml]>=6.2",
  "wheel",
  "oldest-supported-numpy",
]
build-backend = "setuptools.build_meta"

[project]
name = "drms"
description = "Access HMI, AIA and MDI data from the Standford JSOC DRMS"
requires-python = ">=3.10"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { file = "licenses/LICENSE.rst" }
authors = [
  { name = "The SunPy Community", email = "sunpy@googlegroups.com" },
]
dependencies = [
  "numpy",
  "pandas",
  "packaging"
]
dynamic = ["version"]

[project.optional-dependencies]
tests = [
  "pytest",
  "pytest-astropy",
  "pytest-doctestplus",
  "pytest-cov",
  "pytest-xdist",
]
docs = [
  "astropy",
  "matplotlib",
  "sphinx",
  "sphinx-automodapi",
  "sphinx-changelog",
  "sphinx-copybutton",
  "sphinx-gallery",
  "sphinx-hoverxref",
  "sphinxext-opengraph",
  "sunpy-sphinx-theme",
  # Remove next line when fixed in towncrier; see https://github.com/twisted/towncrier/issues/528
  "importlib-resources,
  "sphinx-automodapi",
]
[project.urls]
repository = "https://sunpy.org"

[tool.black]
line-length = 120
target-version = ['py310']
exclude = '''
(
  /(
    \.eggs
    | \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
    | docs
    | .history
  )/
)
'''

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["drms*"]
exclude = ["drms._dev*"]

[tool.setuptools_scm]
write_to = "drms/_version.py"

[ tool.gilesbot ]
  [ tool.gilesbot.pull_requests ]
    enabled = true

  [ tool.gilesbot.towncrier_changelog ]
    enabled = true
    verify_pr_number = true
    changelog_skip_label = "No Changelog Entry Needed"
    help_url = "https://github.com/sunpy/drms/blob/main/changelog/README.rst"
    changelog_missing_long = "There isn't a changelog file in this pull request. Please add a changelog file to the `changelog/` directory following the instructions in the changelog [README](https://github.com/sunpy/drms/blob/main/changelog/README.rst)."
    type_incorrect_long = "The changelog file you added is not one of the allowed types. Please use one of the types described in the changelog [README](https://github.com/sunpy/drms/blob/main/changelog/README.rst)"
    number_incorrect_long = "The number in the changelog file you added does not match the number of this pull request. Please rename the file."

[tool.towncrier]
    package = "drms"
    filename = "CHANGELOG.rst"
    directory = "changelog/"
    issue_format = "`#{issue} <https://github.com/sunpy/drms/pull/{issue}>`__"
    title_format = "{version} ({project_date})"

    [[tool.towncrier.type]]
        directory = "breaking"
        name = "Backwards Incompatible Changes"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "api"
        name = "API Changes"
        showcontent = true

    [[tool.towncrier.type]]
      directory = "removal"
      name = "Deprecations and Removals"
      showcontent = true

    [[tool.towncrier.type]]
      directory = "feature"
      name = "Features"
      showcontent = true

    [[tool.towncrier.type]]
      directory = "bugfix"
      name = "Bug Fixes"
      showcontent = true

    [[tool.towncrier.type]]
      directory = "doc"
      name = "Added/Improved Documentation"
      showcontent = true

    [[tool.towncrier.type]]
      directory = "docfix"
      name = "Documentation Fixes"
      showcontent = true

    [[tool.towncrier.type]]
      directory = "trivial"
      name = "Trivial/Internal Changes"
      showcontent = true
