[build-system]
requires = [
  "setuptools>=62.1",
  "setuptools_scm[toml]>=8.0.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "drms"
description = "Access HMI, AIA and MDI data from the Standford JSOC DRMS"
requires-python = ">=3.10"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { file = "licenses/LICENSE.rst" }
authors = [
  { name = "The SunPy Community", email = "sunpy@googlegroups.com" },
]
dependencies = [
  "numpy>=1.23.5",
  "pandas>=1.5.1",
  "packaging>=23.0"
]
dynamic = [ "version" ]

[project.optional-dependencies]
tests = [
  "pytest",
  "pytest-astropy",
  "pytest-doctestplus",
  "pytest-cov",
  "pytest-xdist",
  "astropy",
]
docs = [
  "sphinx",
  "sphinx-automodapi",
  "sunpy-sphinx-theme",
  "packaging",
  "astropy",
  "matplotlib",
  "sphinx-changelog",
  "sphinx-copybutton",
  "sphinx-gallery",
  "sphinx-hoverxref",
  "sphinxext-opengraph",
]

[project.urls]
Homepage = "https://sunpy.org"
"Source Code" = "https://github.com/sunpy/drms"
Download = "https://pypi.org/project/sunpy"
Documentation = "https://docs.sunpy.org/projects/drms"
Changelog = "https://docs.sunpy.org/projects/drms/en/stable/whatsnew/changelog.html"
"Issue Tracker" = "https://github.com/sunpy/drms/issues"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["drms*"]
exclude = ["drms._dev*"]

[tool.setuptools_scm]
version_file = "drms/_version.py"

[tool.gilesbot]
  [tool.gilesbot.pull_requests]
  enabled = true

  [tool.gilesbot.towncrier_changelog]
  enabled = true
  verify_pr_number = true
  changelog_skip_label = "No Changelog Entry Needed"
  help_url = "https://github.com/sunpy/drms/blob/main/changelog/README.rst"

  changelog_missing_long = "There isn't a changelog file in this pull request. Please add a changelog file to the `changelog/` directory following the instructions in the changelog [README](https://github.com/sunpy/drms/blob/main/changelog/README.rst)."

  type_incorrect_long = "The changelog file you added is not one of the allowed types. Please use one of the types described in the changelog [README](https://github.com/sunpy/drms/blob/main/changelog/README.rst)"

  number_incorrect_long = "The number in the changelog file you added does not match the number of this pull request. Please rename the file."

# TODO: This should be in towncrier.toml but Giles currently only works looks in
# pyproject.toml we should move this back when it's fixed.
[tool.towncrier]
  package = "drms"
  filename = "CHANGELOG.rst"
  directory = "changelog/"
  issue_format = "`#{issue} <https://github.com/sunpy/drms/pull/{issue}>`__"
  title_format = "{version} ({project_date})"

  [[tool.towncrier.type]]
  directory = "breaking"
  name = "Breaking Changes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "deprecation"
  name = "Deprecations"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "removal"
  name = "Removals"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "feature"
  name = "New Features"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "bugfix"
  name = "Bug Fixes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "doc"
  name = "Documentation"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "trivial"
  name = "Internal Changes"
  showcontent = true
