[metadata]
name = drms
provides = drms
description = Access HMI, AIA and MDI data from the Standford JSOC DRMS
long_description = file: README.rst
long_description_content_type = text/x-rst
author = The SunPy Community
author_email = sunpy@googlegroups.com
license = BSD 2-Clause
license_files = LICENSE.rst
url = https://sunpy.org
edit_on_github = True
github_project = sunpy/drms
platform = any
keywords = solar physics, solar, science, data
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Science/Research
  License :: OSI Approved :: BSD License
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Topic :: Scientific/Engineering :: Astronomy
  Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
python_requires = >=3.9
packages = find:
include_package_data = True
setup_requires =
  setuptools_scm
install_requires=
  numpy
  pandas
  packaging

[options.extras_require]
tests =
  pytest-astropy
  tox
docs =
  astropy
  matplotlib
  sphinx
  sphinx-automodapi
  sphinx-changelog
  sphinx-copybutton
  sphinx-gallery
  sphinx-hoverxref
  sphinxext-opengraph
  sunpy-sphinx-theme
  # Remove next line when fixed in towncrier; see https://github.com/twisted/towncrier/issues/528
  importlib-resources<6

[options.packages.find]
exclude = drms._dev

[options.entry_points]
console_scripts =
    drms = drms.main:main

[tool:pytest]
testpaths = "drms" "docs"
norecursedirs = ".tox" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info" "examples" ".history" "paper" "drms[\/]_dev"
doctest_plus = enabled
doctest_optionflags = NORMALIZE_WHITESPACE FLOAT_CMP ELLIPSIS
addopts = --doctest-rst -p no:unraisableexception -p no:threadexception
markers =
    remote_data: marks this test function as needing remote data.
    jsoc: marks the test function as needing a connection to JSOC.
    kis: marks the test function as needing a connection to KIS.
remote_data_strict = True
filterwarnings =
    error
    # Do not fail on pytest config issues (i.e. missing plugins) but do show them
    always::pytest.PytestConfigWarning
    # This is due to dependencies building with a numpy version different from
    # the local installed numpy version, but should be fine
    # See https://github.com/numpy/numpy/issues/15748#issuecomment-598584838
    ignore:numpy.ufunc size changed:RuntimeWarning
    ignore:numpy.ndarray size changed:RuntimeWarning
    # https://github.com/pytest-dev/pytest-cov/issues/557
    ignore:The --rsyncdir command line argument and rsyncdirs config variable are deprecated.:DeprecationWarning
